# cLearnTest

./: .gitignore  CMakeLists.txt  README.md
001-part/: README.md
001-review/: README.md
002-part/: 2.1-first.c  2.2-fathm_ft.c  2.3-two_func.c  2.4-nogood.c  2.5-stillbad.c  README.md
002-review/: 01-question.c  02-question.c  03-question.c  04-question.c  05-question.c  06-question.c  07-question.c  08-question.c  README.md
003-part/: 3.1-platinum.c  3.10-escape.c  3.2-print.c  3.3-bases.c  3.3.1-toobig.c  3.4-print.c  3.5-charcode.c  3.6-altnames.c  3.7-showf_pt.c  3.7.1-floaterr.c  3.8-typesize.c  3.9-badcount.c  README.md
003-review/: 02-question.c  03-question.c  04-question.c  05-question.c  06-question.c  07-question.c  08-question.c  README.md
004-part/: 4.1-talkback.c  4.10-stringf.c  4.11-intconv.c  4.12-floatcnv.c  4.13-prntval.c  4.14-longstrg.c  4.15-input.c  4.16-varwid.c  4.17-skip2.c  4.2-praisel.c  4.3-praise2.c  4.4-pizza.c  4.5-defines.c  4.6-printout.c  4.7-width.c  4.8-floats.c  4.9-flags.c  README.md
004-review/: 01-question.c  02-question.c  03-question.c  04-question.c  05-question.c  06-question.c  07-question.c  08-question.c  README.md
005-part/: 5.1-shoes1.c  5.10-add_one.c  5.11-post_pre.c  5.12-bottles.c  5.13-addemup.c  5.14-convert.c  5.15-pound.c  5.16-running.c  5.2-shoes2.c  5.3-golf.c  5.4-squares.c  5.5-wheat.c  5.6-divide.c  5.7-rules.c  5.8-sizeof.c  5.9-min_sec.c
005-review/: 01-question.c  02-question.c  03-question.c  04-question.c  05-question.c  06-question.c  07-question.c  08-question.c  09-question.c
(+38 files in other folders)
